Refactor SubmissionService for Constructor Injection, Package Rename, and Immutable Stream Lists
This PR refactors SubmissionService to improve adherence to Java conventions and best practices:

Package Rename

Changed package net.java.lms_backend.Service; to package net.java.lms_backend.service; to match Java’s lowercase package naming guideline 
Oracle Docs
Oracle
.

Constructor Injection

Removed all field‐based @Autowired injections for repositories and mapper, introducing a constructor with explicit private final fields and null checks, enhancing immutability and testability 
Oracle Docs
codemia.io
.

Immutable List Retrieval

Replaced stream().collect(Collectors.toList()) with stream().toList() in all methods, returning unmodifiable lists (Java 16+) to prevent accidental mutations 
Oracle Blogs
Reddit
.

Consistent Exception Handling

For missing Assignment, Student, or Submission, throw ResponseStatusException(HttpStatus.NOT_FOUND, "..."), giving clients a standardized 404 response. Removed IllegalArgumentException for these cases 
Oracle Docs
Oracle Docs
.

Edge Case Handling

Validated input (e.g., nonempty file, nonnull grade ≥ 0) remains enforced with IllegalArgumentException.

File saving logic and IO errors are wrapped in RuntimeException for clarity.

Testing & Validation:

Unit Tests: Updated existing tests to instantiate SubmissionService via its constructor with mocked dependencies. Added tests to verify that .toList() returns unmodifiable lists (attempting to add an element throws UnsupportedOperationException).

Integration Tests: Verified that endpoints return 404 when resources are missing and 200 on success.

Manual Smoke Tests: Confirmed file uploads succeed and that grade/feedback patches are applied correctly.

Please review for correctness, especially around package naming, dependency injection, and HTTP error propagation.